fix(content): large table overflow (#1449)

--- a/themes/navy/source/css/_partial/page.styl
+++ b/themes/navy/source/css/_partial/page.styl
@@ -197,6 +197,8 @@ note-warn = hsl(0, 100%, 50%)
   table
     max-width: 100%
     border: 1px solid color-border
+    display: block
+    overflow: auto
     th
       font-weight: bold
     th, td
